--- a/content/themes/o0/default.hbs
+++ b/content/themes/o0/default.hbs
@@ -56,7 +56,7 @@
 </head><body>
 <div class="container">
 	<div class="header">
-		<h1><a href="#start">{{meta_title}}</a><span class="dot">.</span></h1>
+		<h1><a href="#start">{{@blog.title}}</a><span class="dot">.</span></h1>
 	</div>
 	<div class="main">
 
