--- a/content/themes/o0/default.hbs
+++ b/content/themes/o0/default.hbs
@@ -26,7 +26,7 @@
 			.header h1 {font-size: 150px;font-weight: 800;padding: 260px 150px;}
 				.header h1 a {text-decoration: none; color:#000;}
 				.header h1 a:hover {color:red;}
-				.header h1 .du {font-size: 20px!important;background-color: red;color:#fff;padding: 3px 5px;border-radius:50px;margin-left: 5px;}
+				.header h1 .dot {color:red;}
 		.main {max-width:700px;margin: 50px auto;}
 			.main .nav{list-style:none;padding:22px 0;font-size:15px;border-bottom: 1px solid #ececec;width:100%;}
 				.main .nav li{position: relative;display: initial;padding-right:20px;}
