--- a/content/themes/o0/default.hbs
+++ b/content/themes/o0/default.hbs
@@ -23,7 +23,7 @@
 		body, p, li, ul, h1, h2, h3, h4, h5, a, .btn{font-family: "Noto Sans SC","Helvetica Neue","PingFang SC","Hiragino Sans GB","Microsoft YaHei","Hiragino Kaku Gothic Pro",Meiryo,"Malgun Gothic",sans-serif;}
 		.container {position: relative;}
 		.header {width: 100%;text-align: right;}
-			.header h1 {font-size: 150px;font-weight: 800;padding: 260px 150px;}
+			.header h1 {font-size: 150px;font-weight: 800;padding: 270px 50px;text-align: center;}
 				.header h1 a {text-decoration: none; color:#000;}
 				.header h1 a:hover {color:red;}
 				.header h1 .dot {color:red;}
@@ -35,8 +35,8 @@
 				.main .nav a.active {color:#000;border-bottom: 1px solid #000;}
 				.main .nav a.active:hover {color:red;border-bottom: 1px solid red;}
 			.main .content {margin: 20px 0;}
-				.main .content .content-head {padding: 20px 0;}
-				.main .content .content-head h2 {font-size: 20px;padding-bottom: 5px;text-transform: uppercase;}
+				.main .content .content-head {padding: 10px 0;}
+				.main .content .content-head h2 {font-size: 20px;padding-bottom: 5px;text-transform: uppercase;font-weight: 600;}
 					.main .content .content-head h2 a {color:#000;text-decoration: none;}
 					.main .content .content-head h2 a:hover {color:red;}
 				.main .content .content-head p {color:#555;font-size: 12px;}
