--- a/content/themes/decode/index.hbs
+++ b/content/themes/decode/index.hbs
@@ -12,7 +12,7 @@
 	{{#if @blog.title}}<h1 class="blog-title">{{@blog.title}}</h1>{{/if}}
 	{{#if @blog.description}}<h2 class="blog-description">{{@blog.description}}</h2>{{/if}}
 	
-	{{navigation}}
+	{{!navigation}}
 </header>
 
 {{! The main content area on the homepage }}
