--- a/content/themes/decode/assets/styles/style.css
+++ b/content/themes/decode/assets/styles/style.css
@@ -176,7 +176,7 @@
 	font-weight: 300;
 	letter-spacing: 0;
 	line-height: 1.5em;
-	margin-top: 10px;
+	margin-top: 10px !important;
 }
 
 .site-content {
