--- a/content/themes/decode/assets/styles/partials/2 Base Styles.css
+++ b/content/themes/decode/assets/styles/partials/2 Base Styles.css
@@ -29,7 +29,7 @@ h1, h2, h3,
 h4, h5, h6 {
 	text-rendering: optimizeLegibility;
 	line-height: 1;
-	margin-top: 0;
+	/*margin-top: 0;*/
 	
 	a {
 		color: var(--text-color);
